# checkai

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  rust.yml
data/archive/: 32718f4a-adf9-466f-be14-3aa580455c6a.cai.zst
desktop/: electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop/scripts/: generate-icons.mjs
desktop/src/: App.svelte  accessibility.ts  api-client.ts  backend-url.ts  desktop-api.ts  electron-main.ts  main.ts  notifications.ts  preload.ts  renderer.ts  shared-types.ts  stores.ts  styles.css  styles.scss  workspace.ts
desktop/src/components/: CommandPalette.svelte  ModalDialog.svelte  Sidebar.svelte  Toast.svelte  Topbar.svelte
desktop/src/views/: AnalysisView.svelte  ArchiveView.svelte  BoardView.svelte  DashboardView.svelte  EngineView.svelte  GamesView.svelte  LogsView.svelte  SettingsView.svelte
desktop/src/workspace/: refresh.ts
docs/: AGENT.md  changelog.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/agent/: chess-rules.md  examples.md  game-state.md  move-output.md  overview.md  special-actions.md
docs/api/: analysis.md  rest.md  websocket.md
docs/guide/: analysis.md  architecture.md  cli.md  configuration.md  desktop-ui.md  docker.md  getting-started.md  i18n.md  npm-package.md  opening-book.md  tablebases.md  web-ui.md  what-is-checkai.md
locales/: de.yml  en.yml  es.yml  fr.yml  ja.yml  pt.yml  ru.yml  zh-CN.yml
npm/: README.md  package.json
npm/scripts/: prepare-pkg.mjs
npm/src/: index.mjs  wasm.mjs
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: analysis.rs  analysis_api.rs  api.rs  eval.rs  export.rs  game.rs  i18n.rs  main.rs  movegen.rs  opening_book.rs  polyglot_keys.rs  search.rs  storage.rs  tablebase.rs  terminal.rs  types.rs  update.rs  ws.rs  zobrist.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  search.rs
web/: eslint.config.js  index.html  index.vite.html  package.json  tsconfig.json  vite.config.ts
web/css/: styles.css
web/js/: app.js  i18n.js
web/src/: analysis.ts  api.ts  archive.ts  board.ts  game.ts  i18n.ts  main.ts  store.ts  styles.css  types.ts  ui.ts  ws.ts
