[package]
name = "checkai-wasm"
version = "0.5.2"
edition = "2024"
description = "CheckAI chess engine compiled to WebAssembly — use as a Node.js CLI or library"
license = "MIT"
repository = "https://github.com/JosunLP/checkai"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM interop
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Required by types.rs (ToSchema derive)
utoipa = "4"

# Logging (used by search.rs)
log = "0.4"

# WASM-compatible replacement for std::time::Instant
web-time = "1"

# WASM-compatible console logger
console_log = { version = "1", features = ["color"] }

# Access to JavaScript Date.now() for timestamps
js-sys = "0.3"

# Web APIs (kept for potential browser-side usage)
web-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
